# planner-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.example.yml  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  authentication.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/middlewares/: api_secret_middleware.py
app/models/: task.py  user.py
app/repositories/: task_repository.py  user_repo.py  user_repository.py
app/schemas/: auth.py  task.py  user.py
app/services/: auth_service.py  task_service.py  user_service.py
