[project]
name = "planner-api"
version = "0.1.0"
description = ""
authors = [
    { name = "koloandre" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = '0.115.14'
uvicorn = '0.35.0'
sqlalchemy = '2.0.41'
psycopg2-binary = '2.9.10'
pydantic = { version = "*", extras = ["email"] }
python-multipart = '0.0.20'
fastapi-utils = '0.8.0'
typing-inspect = '0.9.0'
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
typing_inspect = '0.9.0'
rich = '14.0.0'
